<resources>
    <string name="app_name">SSC MTS Admin</string>
    <string name="good">Good</string>
    <string name="morning">Morning!</string>
    <string name="evening">Evening!</string>
    <string name="night">Night!</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="downloads">Downloads</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="night_mode">Night Mode</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="about_us">About Us</string>
    <string name="advanced_pdf_viewer">Advanced PDF Viewer</string>
    <string name="basic_pdf_viewer">Basic PDF Viewer</string>
    <string name="nothing_available">Nothing Available</string>
    <string name="notifications">Notifications</string>
    <string name="select_mode">Select Mode</string>
    <string name="adding_to_path">Adding to Path</string>
    <string name="delete">Delete</string>
    <string name="select_type">Select Type</string>
    <string name="add">Add</string>
    <string name="add_banner">Add Banner</string>
    <string name="delete_banner">Delete Banner</string>
    <string name="enter_pdf_name">Enter PDF Name</string>
    <string name="enter_file_name">Enter File Name</string>
    <string name="enter_pdf_url">Enter PDF URL</string>
    <string name="bookmark">Bookmark</string>
    <string name="add_test">Add Test</string>

</resources>