<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="12dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:fontFamily="@font/poppinsregular"
        android:text="@string/adding_to_path"
        android:textColor="?attr/textColorTheme"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/path_bottom_sheet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:fontFamily="@font/poppinsbold"
        android:textColor="?attr/textColorTheme"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="12dp"
        android:fontFamily="@font/poppinsregular"
        android:text="@string/select_type"
        android:textColor="?attr/textColorTheme"
        android:textSize="18sp" />

    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/type_selector_bottom_style_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp" />


    <EditText
        android:id="@+id/file_name_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_file_name"
        android:textColor="?attr/textColorTheme"
        android:textColorHint="?attr/textColorTheme"
        android:layout_margin="12dp"
        android:fontFamily="@font/poppinsregular"/>
    <EditText
        android:id="@+id/pdf_name_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_pdf_name"
        android:textColor="?attr/textColorTheme"
        android:textColorHint="?attr/textColorTheme"
        android:layout_margin="12dp"
        android:fontFamily="@font/poppinsregular"
        android:visibility="gone"/>

<!--    <EditText-->
<!--        android:id="@+id/pdf_url_edittext"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:fontFamily="@font/poppinsregular"-->
<!--        android:hint="@string/enter_pdf_url"-->
<!--        android:layout_margin="12dp"-->
<!--        android:textColor="?attr/textColorTheme"-->
<!--        android:textColorHint="?attr/textColorTheme"-->
<!--        android:visibility="gone"/>-->
    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="?attr/backgroundColorTheme"
        android:fontFamily="@font/poppinsregular"
        android:text="Add pdf from storage"
        android:textColor="?attr/textColorTheme"
        android:id="@+id/add_pdf_local_storage"
        android:textSize="18sp"
        android:visibility="gone"/>
    <SeekBar
        android:id="@+id/upload_progress"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:visibility="gone"/>

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="?attr/backgroundColorTheme"
        android:fontFamily="@font/poppinsregular"
        android:text="@string/add"
        android:textColor="?attr/textColorTheme"
        android:id="@+id/bottom_sheet_add_button"
        android:textSize="18sp"/>

</LinearLayout>
