<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.ProfileFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="12dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:layout_weight="1"
            android:fontFamily="@font/poppinsbold"
            android:textColor="?attr/textColorTheme"
            android:textSize="20sp"
            android:text="@string/night_mode"/>

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/active_mode_theme"
            android:layout_margin="10dp"
            />
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:fontFamily="@font/poppinsbold"
        android:textColor="?attr/textColorTheme"
        android:textSize="20sp"
        android:text="@string/privacy_policy"
        android:id="@+id/privacy_policy"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:fontFamily="@font/poppinsbold"
        android:textColor="?attr/textColorTheme"
        android:textSize="20sp"
        android:text="@string/about_us"
        android:id="@+id/about_us"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/auth_email"
            android:textSize="20sp"
            android:fontFamily="@font/poppinsbold"
            android:layout_margin="24dp"
            android:layout_weight="1"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/logout"
            android:textSize="20sp"
            android:fontFamily="@font/poppinsbold"
            android:layout_margin="24dp"
            android:text="logout"
            />


    </LinearLayout>

</LinearLayout>